# mentnl-ingest

./: .env.example  README.md  pyproject.toml
mentnl_ingest/: cli.py  config.py  github.py  logger.py  main.py
