[tool.poetry]
name = "mentnl-ingest"
version = "0.1.0"
description = ""
authors = ["jthetzel <jthetzel@gmail.com>"]
readme = "README.md"
packages = [{include = "mentnl_ingest"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
